--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -29,7 +29,17 @@
     {% else %}
       <a href="{% url "login" %}">Log-in</a>
     {% endif %}
-  </span>
+    </span>
+    {% if messages %}
+    <ul class="messages">
+      {% for message in messages %}
+        <li class="{{ message.tags }}">
+          {{ message|safe }}
+            <a href="#" class="close">x</a>
+        </li>
+      {% endfor %}
+    </ul>
+  {% endif %}
   </div>
   <div id="content">
     {% block content %}
