--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -12,6 +12,7 @@
     {% else %}
     <p>Please, use the following form to log-in. If you don't have an account <a href="{% url "register" %}">register here</a></p>
     {% endif %}
+
     <div class= "login-form">
         <form action="{% url 'login' %}" method="post">
             {{form.as_p}}
@@ -20,6 +21,13 @@
             <p><input type = "submit" value="Log-in"></p>
         </form>
         <p><a href="{%url "password_reset" %}">Forgotten your password?</a></p>
+    </div>
+    <div class="social">
+    <ul>
+        <li class="twitter">
+            <a href="{% url "social:begin" "twitter" %}">Login with Twitter</a>
+          </li>
+    </ul>
     </div>
 
 {% endblock %}
